envoy.yaml
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address: { address: 127.0.0.1, port_value: 9090 }
    listener_filters:
    - name: "sockip"
      typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: default_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: original_destination }
          http_filters:
          - name: envoy.filters.http.original_src
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.original_src.v3.OriginalSrc
              mark: 0xdeadbeef
          - name: envoy.filters.http.router
  clusters:
  - name: original_destination
    type: ORIGINAL_DST
    connect_timeout: 6s
    lb_policy: CLUSTER_PROVIDED
    dns_lookup_family: V4_ONLY
